fixed an issue with the header overlapping with the input box

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     text-align: center;
     background: black;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     border-radius: 10px 10px 10px 10px;
 }
 
@@ -45,7 +45,7 @@ body{
     border-radius: 10px 10px 0 0;
     border: none;
     font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .input::placeholder{
